2006-12-06  Edward Hervey  <edward@fluendo.com>

	* bin/pitivi.in:
	localedir is a global variable. Without specifying that, we end up with 
	localedir never being set globally.

2006-12-04  Edward Hervey  <edward@fluendo.com>

	* pitivi/.cvsignore:
	* pitivi/elements/.cvsignore:
	* pitivi/ui/.cvsignore:
	CVS ignore cleanup

2006-12-04  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py: (SmartBin):
	Add an audiorate to the audio part of the encoding bin.
	(SmartBin._debugProbe):probe method for debug uses. The lines using it
	are commented since it's expensive in debug output.

2006-12-04  Edward Hervey  <edward@fluendo.com>

	Patch by: Richard Boulton <richard@tartarus.org>
	
	* bin/pitivi.in:
	* pitivi/configure.py.in:
	Allow pitivi to work on local svn repositories in the same way it works
	when using uninstalled from CVS.
	Fixes #381970

2006-12-04  Edward Hervey  <edward@fluendo.com>

	Patch by: Richard Boulton <richard@tartarus.org>
	
	* pitivi/ui/mainwindow.py: (PitiviMainWindow._setActions): 
	Use connect_after instead of connect when connection to key events, so
	that standard handlers (like menu shortcuts) can actually work.
	Fixes #381959

2006-12-04  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Small typo fix.

2006-12-04  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Switch checks for gst-python and pygtk to python checks instead of
	relying on pkg-config since there might be several versions of the
	modules (on per python version) and pkg-config only handles one version.
	Fixes #382249

2006-12-03  Edward Hervey  <edward@fluendo.com>

	* pitivi/objectfactory.py:
	If an audio caps does not have a depth property, use the width property.

2006-12-02  Edward Hervey  <edward@fluendo.com>

	* configure.ac: (PYGST_REQ): Add requirement for gst-python >= 0.10.5.4
	since we need some new additions that are used in the smart video
	scaler.

2006-12-01  Edward Hervey  <edward@fluendo.com>

	* pitivi/elements/smartscale.py: